--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,5 +1,15 @@
 @import './variables.scss';
+@import './search.scss';
 
 body {
-    background-color: $color-accent;
+    color: $color-dark;
+    font-family: 'Roboto';
+    font-size: 16px;
+    line-height: 1;
+    letter-spacing: 0.01em;
+}
+
+.header {
+    padding: 16px 12px;
+    background-color: $color-dark;
 }
