--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,9 +1,10 @@
 @import './variables.scss';
+@import './normalize.scss';
 @import './search.scss';
 
 body {
     color: $color-dark;
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     line-height: 1;
     letter-spacing: 0.01em;
