--- a/src/css/search.scss
+++ b/src/css/search.scss
@@ -10,6 +10,23 @@
     }
 }
 
+@keyframes FadeIn {
+    0% {
+        display: none;
+        opacity: 0;
+    }
+
+    1% {
+        display: block;
+        opacity: 0;
+    }
+
+    100% {
+        display: block;
+        opacity: 1;
+    }
+}
+
 .search {
     width: 456px;
     max-width: 100%;
@@ -37,8 +54,10 @@
         box-sizing: border-box;
         outline: none;
 
-        &::placeholder {
+        &::placeholder,
+        &::-webkit-input-placeholder {
             color: $color-dark;
+            opacity: 1;
         }
 
         &:focus {
@@ -74,9 +93,64 @@
 
     &__results {
         display: none;
+        position: absolute;
+        top: 72px;
+        left: 0;
+
+        width: 100%;
+        margin: 0;
+        padding: 0;
+
+        list-style: none;
+
+        li {
+            position: relative;
+            padding: 15px 47px;
+            border: 1px solid $color-grey;
+            background-color: $color-grey-light;
+            border-bottom-width: 0;
+
+            &:first-child {
+                border-top-left-radius: 4px;
+                border-top-right-radius: 4px;
+            }
+
+            &:last-child {
+                border-bottom-width: 1px;
+                border-bottom-left-radius: 4px;
+                border-bottom-right-radius: 4px;
+            }
+
+            &:hover {
+                background-color: $color-accent;
+                border-color: $color-accent;
+                color: $color-white;
+
+                + li {
+                    border-top-color: $color-accent;
+                }
+
+                &::before {
+                    background-image: url('../assets/repo-icon-white.svg')
+                }
+            }
+
+            &::before {
+                content: '';
+                position: absolute;
+                top: 16px;
+                left: 16px;
+                width: 16px;
+                height: 16px;
+                background: url('../assets/repo-icon.svg') center no-repeat;
+                background-size: cover;
+                pointer-events: none;
+            }
+        }
 
         &_visible {
             display: block;
+            animation: FadeIn .3s ease forwards;
         }
     }
 }
